--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  permission_handler: ^10.3.0
+  image_picker: ^0.8.9
+  contacts_service: ^0.6.3
 
 
   # The following adds the Cupertino Icons font to your application.
