--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   permission_handler: ^10.3.0
   image_picker: ^0.8.9
   contacts_service: ^0.6.3
+  html: ^0.15.4
 
 
   # The following adds the Cupertino Icons font to your application.
